# CompanionHeart-UI

./: .gitignore  .npmrc  LICENSE  README.md  android-build.ps1  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
src/components/Chat/: ChatAvatar.tsx  ChatBubble.tsx  ChatCanvas.tsx  ChatContainer.tsx  ChatHistory.tsx  ChatHistoryBar.tsx  MicButton.tsx  MoreButton.tsx  TtsToggleButton.tsx
src/components/Common/: CurtainTransition.tsx  PullCord.tsx  RoundedTriangle.tsx
src/components/Live2D/: BackgroundPanel.tsx  Live2DCanvasNative.tsx  Live2DHost.tsx  Live2DShowcase.tsx  ModelBubbleOverlay.tsx  NativeLive2DController.ts  SpeechBubble.tsx  live2dModelRect.ts  live2dModelTransform.ts  useLive2D.ts
src/config/: live2d.ts
src/config/live2d/: akari.ts  default.ts  moran.ts  universal.ts  配置规则.md
src/cubism-sdk/Framework/: tsconfig.json
src/cubism-sdk/src/: initLive2D.ts  lappdefine.ts  lappdelegate.ts  lappglmanager.ts  lapplive2dmanager.ts  lappmodel.ts  lappsubdelegate.ts  lapptexturemanager.ts  lappview.ts
src/hooks/: usePlatform.ts  useTypewriter.ts
src/pages/: DevGlobalSettingsPage.tsx  HomePage.tsx  MenuPage.tsx  ParentPage1.tsx  PhoneHomePage.tsx
src/services/: apiClient.ts
src/store/: chatStore.ts  live2dHostStore.ts  live2dStore.ts  settingsStore.ts
src/types/: live2d.ts
src/utils/: audioUtils.ts  textCleaner.ts
(+2 files in other folders)
