[package]
name = "companionheart-uicompanionheart-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "companionheart_uicompanionheart_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 发布构建优化（性能优先）：
# Rust 壳层只做窗口管理，渲染在 WebView 侧；opt-level=3 保证运行性能，
# lto + codegen-units=1 + strip + panic=abort 同时显著压缩二进制体积
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

